--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcQNVSXE80lx7gOK9P1v41",
+      "authorship_tag": "ABX9TyP7d180oQAtzstbP1V1Ibse",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9Ym1tUpLOip4"
       },
@@ -59,10 +59,91 @@
         "\n",
         "# Runtime per operations is constant - O(1)\n",
         "# regardless of size of n, algo takes constant time\n",
-        "# O(log n) - logarithmic runtime\n"
+        "# O(log n) - logarithmic runtime\n",
+        "\n",
+        "# O(n^2)\n",
+        "\n",
+        "# O(n^3)\n",
+        "\n",
+        "# O(nlogn) | Quasilinear (worst case runtime betwene qudratic and linear) | Merge sort\n",
+        "\n",
+        "# O(n^k) - Polynomial runtime\n",
+        "\n",
+        "# O(n!) - Factorial/Combinatorial runtimes"
       ],
       "metadata": {
         "id": "ZInamcD2OsSN"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Linear Search"
+      ],
+      "metadata": {
+        "id": "Q4mE9khZYXMT"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def linear_search(lst, target):\n",
+        "  \"\"\"\n",
+        "  Returns the index of target if found, else returns None\n",
+        "  \"\"\"\n",
+        "  for i in range(0,len(lst)):\n",
+        "    if lst[i] == target:\n",
+        "      return i\n",
+        "  return None\n",
+        "\n",
+        "def verify(ix):\n",
+        "  if ix is not None:\n",
+        "    print(\"Target found at index:\", ix)\n",
+        "  else:\n",
+        "    print(\"Target not found\")\n",
+        "\n",
+        "numbers = [i for i in range(1,11)]\n",
+        "result = linear_search(numbers, 6)\n",
+        "verify(result)"
+      ],
+      "metadata": {
+        "id": "I4QQlBusZyyh",
+        "outputId": "7ed2c3f5-3497-4ed1-914a-8ec461b826e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Target found at index: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def binary_search(list, target):\n",
+        "  first = 0\n",
+        "  last = len(list) - 1\n",
+        "\n",
+        "  while first <= last:\n",
+        "    midpoint = (first + last)//2    # floor division\n",
+        "    if list[midpoint] == target:\n",
+        "      return midpoint\n",
+        "    elif list[midpoint] < target:\n",
+        ""
+      ],
+      "metadata": {
+        "id": "QOQ2NqwjdJAu"
       },
       "execution_count": null,
       "outputs": []
