--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7d180oQAtzstbP1V1Ibse",
+      "authorship_tag": "ABX9TyP5dk3pD6ISxqrd0iBFmJ1y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "9Ym1tUpLOip4"
       },
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "ZInamcD2OsSN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "Q4mE9khZYXMT"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,6 +131,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 1:22 something for time lapse\n",
         "def binary_search(list, target):\n",
         "  first = 0\n",
         "  last = len(list) - 1\n",
@@ -139,8 +140,7 @@
         "    midpoint = (first + last)//2    # floor division\n",
         "    if list[midpoint] == target:\n",
         "      return midpoint\n",
-        "    elif list[midpoint] < target:\n",
-        ""
+        "    elif list[midpoint] < target:\n"
       ],
       "metadata": {
         "id": "QOQ2NqwjdJAu"
