Binary search completed

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5dk3pD6ISxqrd0iBFmJ1y",
+      "authorship_tag": "ABX9TyPmr4oRxnwO+eSYfGcCJ+Nr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9Ym1tUpLOip4"
       },
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "ZInamcD2OsSN"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "Q4mE9khZYXMT"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -98,8 +98,17 @@
         "  for i in range(0,len(lst)):\n",
         "    if lst[i] == target:\n",
         "      return i\n",
-        "  return None\n",
-        "\n",
+        "  return None"
+      ],
+      "metadata": {
+        "id": "I4QQlBusZyyh"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def verify(ix):\n",
         "  if ix is not None:\n",
         "    print(\"Target found at index:\", ix)\n",
@@ -111,13 +120,13 @@
         "verify(result)"
       ],
       "metadata": {
-        "id": "I4QQlBusZyyh",
-        "outputId": "7ed2c3f5-3497-4ed1-914a-8ec461b826e7",
+        "id": "nEqUrl70llGA",
+        "outputId": "0a3e0d88-3d7e-4772-f884-a2f302c97008",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,6 +140,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# case 1:  [0,1,2,3,4,5]\n",
+        "# case 2:  [0,1,2,3,4]\n",
         "# 1:22 something for time lapse\n",
         "def binary_search(list, target):\n",
         "  first = 0\n",
@@ -140,10 +151,104 @@
         "    midpoint = (first + last)//2    # floor division\n",
         "    if list[midpoint] == target:\n",
         "      return midpoint\n",
-        "    elif list[midpoint] < target:\n"
+        "    elif list[midpoint] < target:\n",
+        "      first = midpoint + 1\n",
+        "    else:\n",
+        "      last = midpoint - 1\n",
+        "\n",
+        "  return None"
       ],
       "metadata": {
         "id": "QOQ2NqwjdJAu"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = binary_search(numbers,6)\n",
+        "verify(result)"
+      ],
+      "metadata": {
+        "id": "8iXO4__-mwKP",
+        "outputId": "67df6b52-bd8d-4238-a0f6-6523f7c2db7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Target found at index: 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def recursive_binary_search(list, target):\n",
+        "  if len(list) == 0:\n",
+        "    return False\n",
+        "  else:\n",
+        "    midpoint = len(list)//2\n",
+        "\n",
+        "    if list[midpoint] == target:\n",
+        "      return True\n",
+        "    else:\n",
+        "      if list[midpoint] < target:\n",
+        "        return recursive_binary_search(list[midpoint+1:], target)\n",
+        "      else:\n",
+        "        return recursive_binary_search(list[:midpoint], target)\n",
+        "\n",
+        "def verify(result):\n",
+        "  return \"Target found\" if result else \"Target not found\""
+      ],
+      "metadata": {
+        "id": "c0d-ph-pm0U_"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "verify(recursive_binary_search(numbers,7))"
+      ],
+      "metadata": {
+        "id": "nsi5Y5D9pmLX",
+        "outputId": "6863c2b3-553c-4cf0-80eb-f8410dbd304c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Target found'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PjxnfhIUpyCO"
       },
       "execution_count": null,
       "outputs": []
